# agent-queue

./: .agent-queue-lock  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .vibecop.yml  CLAUDE.md  README.md  alembic.ini  analysis-reflection-system.md  docker-compose.yml  goals.md  investigation-supervisor-llm-failure.md  mkdocs.yml  notes.md  openapi.json  outdated_deps_report.json  package-lock.json  package.json  pip-audit-results.json  plan.md  profile.md  pyproject.toml  requirements.md  run.sh  run_tests.sh  setup.sh  setup_wizard.py  test-results-2026-03-14.md  test-results-2026-03-24.md  test_suite.bat
.claude/: plan.md
.github/workflows/: docs.yml
aq-vibecop/: CLAUDE.md  README.md  pyproject.toml
aq-vibecop/aq_vibecop/: __init__.py  formatter.py  plugin.py  runner.py
aq-vibecop/prompts/: findings-summary.md  pre-complete-check.md
archived_tasks/: agile-forge.md  bold-orbit.md  bright-bridge.md  bright-journey.md  calm-crest.md  calm-rapids.md  clear-impact.md  clear-lantern.md  crisp-vault.md  eager-crest.md  fair-lantern.md  fresh-harbor.md  fresh-ridge.md  grand-beacon.md  keen-delta.md  nimble-falcon.md  nimble-rapids.md  noble-current.md  prime-summit.md  quick-nexus.md  sharp-crest.md  smart-crest.md  smart-delta.md  smart-rapids.md  smart-ridge.md  solid-cascade.md  solid-current.md  steady-delta.md  steady-nexus.md  vivid-current.md  vivid-lantern.md  vivid-orbit.md  wise-zenith.md
dashboard/: CLAUDE.md  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  main.tsx
docs/: adapter-development-guide.md  adapter-development.md  agent-queue-primitives.md  agent-tools.md  architecture.md  breakdown.md  cli.md  discord-commands.md  getting-started.md  git-sync-current-state.md  git-sync-gaps.md  hook-pipeline.md  index.md  mcp-capabilities-report.md  migrations.md  task-state-machine.md
docs/api/: agent_names.md  chat_agent.md  chat_observer.md  command_handler.md  config.md  database.md  event_bus.md  file_watcher.md  health.md  hooks.md  index.md  known_tools.md  llm_logger.md  logging_config.md  main.md  memory.md  models.md  orchestrator.md  plan_parser.md  prompt_builder.md  prompt_manager.md  reflection.md  rule_manager.md  schedule.md  scheduler.md  setup_wizard.md  state_machine.md  supervisor.md  task_names.md  tool_registry.md
docs/guides/: adapter-development-guide.md  adapter-development.md  agent-tools.md  architecture.md  cli.md  discord-commands.md  getting-started.md  hook-pipeline.md  migrations.md  task-state-machine.md
docs/migrations/: opus-to-claude-rename.md
docs/plans/: 2026-02-15-agent-queue-design.md  2026-02-15-agent-queue-implementation.md  2026-02-16-project-notes-design.md  2026-02-16-project-notes-implementation.md  2026-02-23-multi-channel-support.md
docs/specs/: agent-profiles.md  chat-agent.md  chat-analyzer.md  chat-observer.md  command-handler.md  config.md  (+20 more)
migrations/: env.py
notes/: blocked-task-detection-procedure-2026-04-22.md  chat-ui-current-state-audit.md  chat-ui-enhancements-implementation-plan.md  dependency-audit-2026-04-02.md  discord-responses-improvement-plan.md  discord-ui-research.md  feature-requests.md  feature-requestsmd.md  feature-requestsmdmd.md  github-actions-integration.md  keen-beacon-splitting-analysis.md  memsearch-integration.md  new-agent-profiles-research.md  screenshot-analysis.md  smart-forge-status.md  stuck-task-detection-procedure-2026-04-22.md  system-health-check-missing-tools-2026-04-22.md  test-fix-plan.md  test-results-2026-03-26.md  test-results-and-fix-plan.md  test-run-findings-20260314.md  ux-feedback.md
reports/: mcp-capabilities-workflow-2.md
scripts/: check-merge-conflicts.sh  check-outdated-deps.py  generate-docs.sh  inflate_llm_logs.py  migrate_sqlite_to_pg.py  migrate_task_records.py  regenerate-api-client.sh  regenerate-ts-client.sh  register-merge-conflict-hook.py
site/: 404.html  index.html  objects.inv  sitemap.xml
specs/: agent-profiles.md  chat-agent.md  chat-analyzer.md  chat-observer.md  command-handler.md  config.md  database.md  hooks.md  llm-logging.md  main.md  memory-consolidation.md  models-and-state-machine.md  orchestrator.md  plan-parser.md  plugin-system.md  proactive-inspector.md  prompt-builder.md  reflection.md  rule-system.md  setup-wizard.md  supervisor.md  tiered-tools.md
src/: __init__.py  _compat.py  agent_names.py  agent_prompting.py  aq_uri.py  chat_agent.py  chat_analyzer.py  chat_analyzer_service.py  chat_observer.py  command_handler.py  config.py  config_editor.py  database.py  embedded_mcp.py  event_bus.py  event_schemas.py  facts_handler.py  facts_parser.py  file_watcher.py  health.py  hooks.py  known_tools.py  llm_logger.py  logging_config.py  main.py  mcp_interfaces.py  mcp_registration.py  memory.py  memory_extractor.py  memory_handler.py  memory_v2_service.py  models.py  orchestrator.py  orphan_workflow_recovery.py  override_handler.py  plan_discovery.py  plan_parser.py  plan_parser_llm.py  playbook_compiler.py  playbook_graph.py  (+37 more)
tests/: conftest.py  test_adapters.py  test_agent_names.py  test_agent_profiles.py  test_agent_prompting.py  test_aq_uri.py  test_archive.py  test_archive_completed_tasks.py  test_bot_channel_cache.py  test_branch_isolated_workspace.py  test_budget.py  test_chat_analyzer.py  test_chat_analyzer_commands.py  test_chat_observer.py  test_claude_usage.py  test_cli.py  test_cli_logs.py  test_compat.py  test_compile_playbook_command.py  test_concurrent_merge_and_push.py  test_config.py  test_config_editor.py  test_config_per_project_channels.py  test_config_profiles.py  test_config_supervisor.py  test_config_validation.py  test_config_watcher.py  test_constraint_enforcement.py  test_create_channel_for_project.py  test_create_project_auto_channels.py  test_create_task_coordination_params.py  test_cross_project_routing.py  test_database.py  test_database_channels.py  test_database_modular.py  test_database_postgresql.py  test_default_agent_type_playbooks.py  test_delete_project_channels.py  test_discord_adapter.py  test_discord_commands.py  (+189 more)
(+422 files in other folders)
