[project]
name = "agent-queue"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "discord.py>=2.6.0",
    "claude-agent-sdk>=0.1.55",
    "pyyaml>=6.0",
    "fastapi>=0.135.0",
    "structlog>=25.1.0",
    "rich>=13.9",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.42.0",
]
gemini = [
    "google-genai>=1.0.0",
]
postgresql = [
    "asyncpg>=0.29.0",
]
telegram = [
    "python-telegram-bot[ext]>=20.0",
]
mcp = [
    "mcp>=1.0.0",
]
cli = [
    "click>=8.1",
    "prompt-toolkit>=3.0",
    "agent-queue-api-client",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
]
memory = [
    "memsearch>=0.1.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
agent-queue = "src.main:main"
agent-queue-mcp = "packages.mcp_server.mcp_server:main"
aq = "src.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages"]
markers = [
    "functional: tests that launch real Claude CLI (require auth + API key)",
    "functional_mcp: functional tests requiring npm/npx for MCP servers",
    "integration: tests requiring external dependencies (memsearch, Milvus Lite, etc.)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
