[project]
name = "aq-vibecop"
version = "0.1.0"
description = "Vibecop static analysis plugin for Agent Queue"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Agent Queue Contributors" }]
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.entry-points."aq.plugins"]
vibecop = "aq_vibecop:VibeCopPlugin"

[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"
